# Copyright 2018 The FydeOS Authors. All rights reserved.
# Use of this source code is governed by a BSD-style license that can be
# found in the LICENSE file.

import("//build/config/chromeos/rules.gni")

assert(is_chromeos, "Non-Chrome-OS builds must not depend on //chromeos")

source_set("dbus_fydeos") {
  deps = [
    "//base",
    "//dbus",
  ]
  sources = [
    "shell_state.cc",
    "shell_state.h",
    "fydeos_shell_client.cc",
    "fydeos_shell_client.h",
    "dbus_clients_fydeos.cc",
    "dbus_clients_fydeos.h",
  ]
  defines = [ "CHROMEOS_IMPLEMENTATION" ]
}
