# Copyright 2018 The FydeOS Authors. All rights reserved.
# Use of this source code is governed by a BSD-style license that can be
# found in the LICENSE file.

import("//build/config/chromeos/rules.gni")

assert(is_chromeos, "Non-Chrome-OS builds must not depend on //chromeos")

static_library("switches") {
  public_deps = [
    "//components/policy/proto",
  ]
  deps = [
    "//base",
    "//ui/base:buildflags",
    "//third_party/icu",
    "//skia",
  ]
  sources = [
  ]
  defines = [ "CHROMEOS_IMPLEMENTATION" ]
}
